ros2_ws/log/build_2024-11-09_08-52-08/drone_home/stderr.log
  File "/home/pi/drone-home/ros2_ws/install/drone_home/lib/python3.12/site-packages/drone_home/joy_to_ackermann.py", line 57
    return
    ^^^^^^
SyntaxError: 'return' outside function

